worked on the blog

--- a/work.html
+++ b/work.html
@@ -82,7 +82,7 @@
         <section class="width-100-pc hide-flow-x writing-m-top">
             <div class="maxwidth-sl mx-auto wrapper tx-c h-100">
                 <div class="grid is-multi-col mostly-3">
-                    <div class="work-item p-2">
+                    <div class="work-item px-1 py-2">
                         <a href="">
                             <img src="img/eyowo.png" class="w-link" alt="Eyowo logo">
                         </a>
@@ -106,7 +106,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="work-item p-2">
+                    <div class="work-item px-1 py-2">
                         <a href="http://cpc.gov.ng" class="">
                             <img src="img/cpc.png" class="w-link" alt="CPC logo">
                         </a>
@@ -130,7 +130,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="work-item p-2">
+                    <div class="work-item px-1 py-2">
                         <a href="" class="">
                             <img src="img/harbor.svg" class="w-link" alt="CPC logo">
                         </a>
@@ -154,7 +154,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="work-item p-2">
+                    <div class="work-item px-1 py-2">
                         <a href="" class="">
                             <img src="img/swinvoice.png" class="w-link" alt="SWInvoice logo">
                         </a>
@@ -178,7 +178,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="work-item p-2">
+                    <div class="work-item px-1 py-2">
                         <a href="" class="">
                             <img src="img/festivesave.png" class="w-link" alt="Festivesave logo">
                         </a>
@@ -202,7 +202,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="work-item p-2">
+                    <div class="work-item px-1 py-2">
                         <a href="" class="">
                             <img src="img/monetran.png" class="w-link" alt="Monetran logo">
                         </a>
