--- a/writing.html
+++ b/writing.html
@@ -90,6 +90,9 @@
                                     CSS Animations: Understanding Keyframes.
                                 </a>
                             </h4>
+                            <p>
+                                Latina probes patre amputata philosophari continens Constituamus eius captiosa significet hunc vocet sententia effecerit successionem legendis maestitiam Haec errata! Multam nihilo desiderare suspicor Tarentinis libenter omne liber sumus vituperatum esse ancillae causa habeo fingi.
+                            </p>
                             <span class="fw-bold picotext">
                                <a href="" class="co-primary prefix is-wider">#CSS</a>
                                <a href="" class="co-primary prefix is-wider">#Animations</a>
@@ -102,6 +105,9 @@
                                     Choosing Design Tools.
                                 </a>
                             </h4>
+                            <p>
+                                Latina probes patre amputata philosophari continens Constituamus eius captiosa significet hunc vocet sententia effecerit successionem legendis maestitiam Haec errata! Multam nihilo desiderare suspicor Tarentinis libenter omne liber sumus vituperatum esse ancillae causa habeo fingi.
+                            </p>
                             <span class="fw-bold picotext">
                                <a href="" class="co-primary prefix is-wider">#Design</a>
                                <a href="" class="co-primary prefix is-wider">#UI</a>
@@ -114,6 +120,9 @@
                                     Semantic Markup and Why They are Necessary.
                                 </a>
                             </h4>
+                            <p>
+                                Latina probes patre amputata philosophari continens Constituamus eius captiosa significet hunc vocet sententia effecerit successionem legendis maestitiam Haec errata! Multam nihilo desiderare suspicor Tarentinis libenter omne liber sumus vituperatum esse ancillae causa habeo fingi.
+                            </p>
                             <span class="fw-bold picotext">
                                 <a href="" class="co-primary prefix is-wider">#HTML</a>
                                 <a href="" class="co-primary prefix is-wider">#UI</a>
@@ -126,6 +135,9 @@
                                     Motivation for yet another day
                                 </a>
                             </h4>
+                            <p>
+                                Latina probes patre amputata philosophari continens Constituamus eius captiosa significet hunc vocet sententia effecerit successionem legendis maestitiam Haec errata! Multam nihilo desiderare suspicor Tarentinis libenter omne liber sumus vituperatum esse ancillae causa habeo fingi.
+                            </p>
                             <span class="fw-bold picotext">
                                 <a href="" class="co-primary prefix is-wider">#Inspiration</a>
                                 <a href="" class="co-primary prefix is-wider">#UI</a>
@@ -138,6 +150,9 @@
                                     CSS Animations: Understanding Keyframes.
                                 </a>
                             </h4>
+                            <p>
+                                Latina probes patre amputata philosophari continens Constituamus eius captiosa significet hunc vocet sententia effecerit successionem legendis maestitiam Haec errata! Multam nihilo desiderare suspicor Tarentinis libenter omne liber sumus vituperatum esse ancillae causa habeo fingi.
+                            </p>
                             <span class="fw-bold picotext">
                                <a href="" class="co-primary prefix is-wider">#CSS</a>
                                <a href="" class="co-primary prefix is-wider">#Animations</a>
@@ -150,6 +165,9 @@
                                     Choosing Design Tools.
                                 </a>
                             </h4>
+                            <p>
+                                Latina probes patre amputata philosophari continens Constituamus eius captiosa significet hunc vocet sententia effecerit successionem legendis maestitiam Haec errata! Multam nihilo desiderare suspicor Tarentinis libenter omne liber sumus vituperatum esse ancillae causa habeo fingi.
+                            </p>
                             <span class="fw-bold picotext">
                                <a href="" class="co-primary prefix is-wider">#DESIGN</a>
                                <a href="" class="co-primary prefix is-wider">#UI</a>
@@ -162,6 +180,9 @@
                                     Semantic Markup and Why They are Necessary.
                                 </a>
                             </h4>
+                            <p>
+                                Latina probes patre amputata philosophari continens Constituamus eius captiosa significet hunc vocet sententia effecerit successionem legendis maestitiam Haec errata! Multam nihilo desiderare suspicor Tarentinis libenter omne liber sumus vituperatum esse ancillae causa habeo fingi.
+                            </p>
                             <span class="fw-bold picotext">
                                 <a href="" class="co-primary prefix is-wider">#HTML</a>
                                 <a href="" class="co-primary prefix is-wider">#UI</a>
@@ -174,6 +195,9 @@
                                     Motivation for yet another day
                                 </a>
                             </h4>
+                            <p>
+                                Latina probes patre amputata philosophari continens Constituamus eius captiosa significet hunc vocet sententia effecerit successionem legendis maestitiam Haec errata! Multam nihilo desiderare suspicor Tarentinis libenter omne liber sumus vituperatum esse ancillae causa habeo fingi.
+                            </p>
                             <span class="fw-bold picotext">
                                 <a href="" class="co-primary prefix is-wider">#Inspiration</a>
                                 <a href="" class="co-primary prefix is-wider">#UI</a>
@@ -184,32 +208,32 @@
                 <div class="right-20 wrapper">
                     <h3>Popular tags</h3>
                     <ul class="none fw-bold">
-                        <li>
+                        <li class=" tag-item">
                             <a href="" class="d-flx al-i-c co-primary">
                                 CSS
                             </a>
                         </li>
-                        <li>
+                        <li class=" tag-item">
                             <a href="" class="d-flx al-i-c co-primary">
                                 UX
                             </a>
                         </li>
-                        <li>
+                        <li class=" tag-item">
                             <a href="" class="d-flx al-i-c co-primary">
                                 Animation
                             </a>
                         </li>
-                        <li>
+                        <li class=" tag-item">
                             <a href="" class="d-flx al-i-c co-primary">
                                 JavaScript
                             </a>
                         </li>
-                        <li>
+                        <li class=" tag-item">
                             <a href="" class="d-flx al-i-c co-primary">
                                 Accessibility
                             </a>
                         </li>
-                        <li>
+                        <li class=" tag-item">
                             <a href="" class="d-flx al-i-c co-primary">
                                 Updates
                             </a>
