modified the header

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         Tonye
     </h1>
     <header class="site-header pos-a w-100">
-        <div class="main-wrap wrapper mx-auto">
+        <div class="main-wrap wrapper-x py-h mx-auto">
             <nav class="d-flx j-c-sb al-i-c">
                 <a  href="index.html" class="logo-area d-flx al-i-c">
                     <img src="img/icon.png" class="small-avatar prefix is-wider" alt="">
