--- a/writing.html
+++ b/writing.html
@@ -43,7 +43,7 @@
         Tonye
     </h1>
     <header class="site-header pos-a w-100">
-            <div class="main-wrap wrapper mx-auto">
+            <div class="main-wrap wrapper-x py-h mx-auto">
                 <nav class="d-flx j-c-sb al-i-c">
                     <a href="index.html" class="logo-area bg-bg d-flx al-i-c">
                         <div class="prefix is-wider d-flx flex-dir-col al-i-c j-c-c">
@@ -67,7 +67,7 @@
                             </a>
                         </li>
                         <li class="my-h">
-                            <a href="writing.html" class="tx-c d-blk py-h co-richblack">
+                            <a href="writing.html" class="tx-c d-blk py-h is-active co-richblack">
                                 Writing
                             </a>
                         </li>
