modified the article page

--- a/article.html
+++ b/article.html
@@ -16,7 +16,7 @@
 
     <link href="css/style.css" rel="stylesheet" />
 
-    <title>Writing | Dennis Dickson | Frontend Designer and Developer.</title>
+    <title>Article | Dennis Dickson | Frontend Designer and Developer.</title>
     <meta property="og:image" content="https://res.cloudinary.com/psybug/image/upload/v1550574723/android-chrome-512x512_xtcrp6.png" />
     <meta property="og:title" content="Dennis Dickson" />
     <meta property="og:locale" content="en_US" />
@@ -80,168 +80,38 @@
 
     <main>
         <section class="width-100-pc hide-flow-x writing-m-top">
-            <div class="clearfix maxwidth-sl mx-auto">
-                <div class="left-80 wrapper">
-                    <ul class="none blog-list">
-                        <li class="borderline-bottom py-1 mb-1">
-                            <span class="fw-bold picotext">2nd July, 2019</span>
-                            <h4 class="m-0 largetext fw-normal">
-                                <a href="" class="py-h mb-h d-blk co-richblack">
-                                    CSS Animations: Understanding Keyframes.
-                                </a>
-                            </h4>
-                            <p>
-                                Latina probes patre amputata philosophari continens Constituamus eius captiosa significet hunc vocet sententia effecerit successionem legendis maestitiam Haec errata! Multam nihilo desiderare suspicor Tarentinis libenter omne liber sumus vituperatum esse ancillae causa habeo fingi.
-                            </p>
-                            <span class="fw-bold picotext">
-                               <a href="" class="co-primary prefix is-wider">#CSS</a>
-                               <a href="" class="co-primary prefix is-wider">#Animations</a>
-                            </span>
-                        </li>
-                        <li class="borderline-bottom py-1 mb-1">
-                            <span class="fw-bold picotext">23rd June, 2019</span>
-                            <h4 class="m-0 largetext fw-normal">
-                                <a href="" class="py-h mb-h d-blk co-richblack">
-                                    Choosing Design Tools.
-                                </a>
-                            </h4>
-                            <p>
-                                Latina probes patre amputata philosophari continens Constituamus eius captiosa significet hunc vocet sententia effecerit successionem legendis maestitiam Haec errata! Multam nihilo desiderare suspicor Tarentinis libenter omne liber sumus vituperatum esse ancillae causa habeo fingi.
-                            </p>
-                            <span class="fw-bold picotext">
-                               <a href="" class="co-primary prefix is-wider">#Design</a>
-                               <a href="" class="co-primary prefix is-wider">#UI</a>
-                            </span>
-                        </li>
-                        <li class="borderline-bottom py-1 mb-1">
-                            <span class="fw-bold picotext">14th May, 2019</span>
-                            <h4 class="m-0 largetext fw-normal">
-                                <a href="" class="py-h mb-h d-blk co-richblack">
-                                    Semantic Markup and Why They are Necessary.
-                                </a>
-                            </h4>
-                            <p>
-                                Latina probes patre amputata philosophari continens Constituamus eius captiosa significet hunc vocet sententia effecerit successionem legendis maestitiam Haec errata! Multam nihilo desiderare suspicor Tarentinis libenter omne liber sumus vituperatum esse ancillae causa habeo fingi.
-                            </p>
-                            <span class="fw-bold picotext">
-                                <a href="" class="co-primary prefix is-wider">#HTML</a>
-                                <a href="" class="co-primary prefix is-wider">#UI</a>
-                            </span>
-                        </li>
-                        <li class="borderline-bottom py-1 mb-1">
-                            <span class="fw-bold picotext">1st May, 2019</span>
-                            <h4 class="m-0 largetext fw-normal">
-                                <a href="" class="py-h mb-h d-blk co-richblack">
-                                    Motivation for yet another day
-                                </a>
-                            </h4>
-                            <p>
-                                Latina probes patre amputata philosophari continens Constituamus eius captiosa significet hunc vocet sententia effecerit successionem legendis maestitiam Haec errata! Multam nihilo desiderare suspicor Tarentinis libenter omne liber sumus vituperatum esse ancillae causa habeo fingi.
-                            </p>
-                            <span class="fw-bold picotext">
-                                <a href="" class="co-primary prefix is-wider">#Inspiration</a>
-                                <a href="" class="co-primary prefix is-wider">#UI</a>
-                            </span>
-                        </li>
-                        <li class="borderline-bottom py-1 mb-1">
-                            <span class="fw-bold picotext">2nd July, 2019</span>
-                            <h4 class="m-0 largetext fw-normal">
-                                <a href="" class="py-h mb-h d-blk co-richblack">
-                                    CSS Animations: Understanding Keyframes.
-                                </a>
-                            </h4>
-                            <p>
-                                Latina probes patre amputata philosophari continens Constituamus eius captiosa significet hunc vocet sententia effecerit successionem legendis maestitiam Haec errata! Multam nihilo desiderare suspicor Tarentinis libenter omne liber sumus vituperatum esse ancillae causa habeo fingi.
-                            </p>
-                            <span class="fw-bold picotext">
-                               <a href="" class="co-primary prefix is-wider">#CSS</a>
-                               <a href="" class="co-primary prefix is-wider">#Animations</a>
-                            </span>
-                        </li>
-                        <li class="borderline-bottom py-1 mb-1">
-                            <span class="fw-bold picotext">23rd June, 2019</span>
-                            <h4 class="m-0 largetext fw-normal">
-                                <a href="" class="py-h mb-h d-blk co-richblack">
-                                    Choosing Design Tools.
-                                </a>
-                            </h4>
-                            <p>
-                                Latina probes patre amputata philosophari continens Constituamus eius captiosa significet hunc vocet sententia effecerit successionem legendis maestitiam Haec errata! Multam nihilo desiderare suspicor Tarentinis libenter omne liber sumus vituperatum esse ancillae causa habeo fingi.
-                            </p>
-                            <span class="fw-bold picotext">
-                               <a href="" class="co-primary prefix is-wider">#DESIGN</a>
-                               <a href="" class="co-primary prefix is-wider">#UI</a>
-                            </span>
-                        </li>
-                        <li class="borderline-bottom py-1 mb-1">
-                            <span class="fw-bold picotext">14th May, 2019</span>
-                            <h4 class="m-0 largetext fw-normal">
-                                <a href="" class="py-h mb-h d-blk co-richblack">
-                                    Semantic Markup and Why They are Necessary.
-                                </a>
-                            </h4>
-                            <p>
-                                Latina probes patre amputata philosophari continens Constituamus eius captiosa significet hunc vocet sententia effecerit successionem legendis maestitiam Haec errata! Multam nihilo desiderare suspicor Tarentinis libenter omne liber sumus vituperatum esse ancillae causa habeo fingi.
-                            </p>
-                            <span class="fw-bold picotext">
-                                <a href="" class="co-primary prefix is-wider">#HTML</a>
-                                <a href="" class="co-primary prefix is-wider">#UI</a>
-                            </span>
-                        </li>
-                        <li class="borderline-bottom py-1 mb-1">
-                            <span class="fw-bold picotext">1st May, 2019</span>
-                            <h4 class="m-0 largetext fw-normal">
-                                <a href="" class="py-h mb-h d-blk co-richblack">
-                                    Motivation for yet another day
-                                </a>
-                            </h4>
-                            <p>
-                                Latina probes patre amputata philosophari continens Constituamus eius captiosa significet hunc vocet sententia effecerit successionem legendis maestitiam Haec errata! Multam nihilo desiderare suspicor Tarentinis libenter omne liber sumus vituperatum esse ancillae causa habeo fingi.
-                            </p>
-                            <span class="fw-bold picotext">
-                                <a href="" class="co-primary prefix is-wider">#Inspiration</a>
-                                <a href="" class="co-primary prefix is-wider">#UI</a>
-                            </span>
-                        </li>
-                    </ul>
-                </div>
-                <div class="right-20 wrapper">
-                    <h3>Popular tags</h3>
-                    <ul class="none fw-bold">
-                        <li class=" tag-item">
-                            <a href="" class="d-flx al-i-c co-primary">
-                                CSS
-                            </a>
-                        </li>
-                        <li class=" tag-item">
-                            <a href="" class="d-flx al-i-c co-primary">
-                                UX
-                            </a>
-                        </li>
-                        <li class=" tag-item">
-                            <a href="" class="d-flx al-i-c co-primary">
-                                Animation
-                            </a>
-                        </li>
-                        <li class=" tag-item">
-                            <a href="" class="d-flx al-i-c co-primary">
-                                JavaScript
-                            </a>
-                        </li>
-                        <li class=" tag-item">
-                            <a href="" class="d-flx al-i-c co-primary">
-                                Accessibility
-                            </a>
-                        </li>
-                        <li class=" tag-item">
-                            <a href="" class="d-flx al-i-c co-primary">
-                                Updates
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+            <div class="clearfix maxwidth-sl mx-auto wrapper">
+                <article>
+                    <h2 class="m-0 largertext fw-normal">
+                        <a href="article.html" class="py-h mb-h d-blk co-richblack">
+                            Semantic Markup and Why They are Necessary.
+                        </a>
+                    </h2>
+                    <div class="top-bottom-border d-flx al-i-c j-c-sb py-1 mb-2">
+                        <span class="fw-bold picotext">14th May, 2019</span>
+                        <span>|</span>
+                        <span class="fw-bold picotext">Reading time: 12 mins</span>
 
+                    </div>
+                </article>
+                <article class="maxwidth-tb mx-auto">
+                    <p>
+                        Maiestatis metuque pacem quisquis audivi defuit aegritudines etsi legere facillime via conspectum referuntur Mnesarchum Sic aliqua nollem eius simplicem pecunias reici. Delectu invidia multis erigimur secumque ignota copulationes credere eligendi ubi afficit legum debitis efficeretur beateque confidet infinito statuerunt labefactetur appareat, Inter suspicor vias contrariis impeditur artifex umquam cernantur natura audivi Praeterea metuamus Mucius scriptum principes.
+                    </p>
+                    <p>
+                        Saxum doleamus diu defendit quasi robustus tertium supplicii videtisne excruciant fama addidisti! Consecutionem bella habere tranquillat statuat referatur plus continent explicari esse Veserim miraretur atomi dolor coniuncta requirere intellegerem. Iudex provocarem mutat perpetuis gloriatur reliquerunt videre expetenda videre; Eloquentiam morte censet conscientiam velit id fruuntur dolendum alteram gratia vix vitam reliquisti meque efficiat.
+                    </p>
+                    <p>
+                        Tranquillitatem illum faciant Eadem Latina etenim statim Chrysippo ego minime torqueantur carere dicturum humili probarem pecunias fugienda ruinae philosophi laetitiam inscientia nos! Praesens bonarum Extremum vituperandae mi Terentii atomum ocurreret inprobitas suspicio doloribus interesset arbitratu facere movere claris, Solido sponte idem praeceptrice necessariae meque dissidens leniter epularum magis perfecto. Cetero stultus mollitia earumque diceret legemus sunt adhuc perpetua breviter deditum fruuntur litterae maledicta remissius!
+                    </p>
+                    <p>
+                        Momenti desiderare verterunt eam eripuit manus Theophrastus efficeretur recteque L animus fortitudinem dum utilitate mea. Dolores forensibus horum sedentis exquirere sapiente suscepi laborat meliore suspicor iniuria fungimur quisquam divitiarum diceret Haec vocent. Delicatissimi sapientium diligenter voluptatem perdiscere eligendi impediente foris Democritea turbulenta adduci amatoriis sint liquidae divelli intellegunt? Cognitio labefactetur tenere elaborare contentus familiari delectatum finibus Romano modi videri consulatu potione Extremum complexiones.
+                    </p>
+                    <p>
+                        Libero Ponti utilitate maiorum intellegitur sequatur praestabiliorem offendit Iam discordia ac dominos suscipere mandamus Consentinis horreat hostis salutandi esse! Temeritate Democriti suscipere reliquaque servire hoc Contra officii cives existimare inopem sollicitare omnem deserunt interesset individua dolor nescio pueriliter ipsarum odio Homero magnus, Contentus causam intellegaturque philosophari homini tollatur M'.que sicut confidet emolumento motum ferreum nemini excepturi. Reperire Praeterea arbitrantur concertationesque parta Graeci postulet errata neglegentur quaeri excepturi praeterita docti imperitorum penitus.
+                    </p>
+                </article>
+            </div>
         </section>
     </main>
 
