--- a/writing.html
+++ b/writing.html
@@ -79,14 +79,14 @@
 
 
     <main>
-        <section class="width-100-pc hide-flow-x writing-m-top">
+        <section class="width-100-pc hide-flow-x  wrapper writing-m-top">
             <div class="clearfix maxwidth-sl mx-auto">
                 <div class="left-80 wrapper">
                     <ul class="none blog-list">
                         <li class="borderline-bottom py-1 mb-1">
                             <span class="fw-bold picotext">2nd July, 2019</span>
                             <h4 class="m-0 largetext fw-normal">
-                                <a href="" class="py-h mb-h d-blk co-richblack">
+                                <a href="article.html" class="py-h mb-h d-blk co-richblack">
                                     CSS Animations: Understanding Keyframes.
                                 </a>
                             </h4>
@@ -101,7 +101,7 @@
                         <li class="borderline-bottom py-1 mb-1">
                             <span class="fw-bold picotext">23rd June, 2019</span>
                             <h4 class="m-0 largetext fw-normal">
-                                <a href="" class="py-h mb-h d-blk co-richblack">
+                                <a href="article.html" class="py-h mb-h d-blk co-richblack">
                                     Choosing Design Tools.
                                 </a>
                             </h4>
@@ -116,7 +116,7 @@
                         <li class="borderline-bottom py-1 mb-1">
                             <span class="fw-bold picotext">14th May, 2019</span>
                             <h4 class="m-0 largetext fw-normal">
-                                <a href="" class="py-h mb-h d-blk co-richblack">
+                                <a href="article.html" class="py-h mb-h d-blk co-richblack">
                                     Semantic Markup and Why They are Necessary.
                                 </a>
                             </h4>
@@ -131,7 +131,7 @@
                         <li class="borderline-bottom py-1 mb-1">
                             <span class="fw-bold picotext">1st May, 2019</span>
                             <h4 class="m-0 largetext fw-normal">
-                                <a href="" class="py-h mb-h d-blk co-richblack">
+                                <a href="article.html" class="py-h mb-h d-blk co-richblack">
                                     Motivation for yet another day
                                 </a>
                             </h4>
@@ -146,7 +146,7 @@
                         <li class="borderline-bottom py-1 mb-1">
                             <span class="fw-bold picotext">2nd July, 2019</span>
                             <h4 class="m-0 largetext fw-normal">
-                                <a href="" class="py-h mb-h d-blk co-richblack">
+                                <a href="article.html" class="py-h mb-h d-blk co-richblack">
                                     CSS Animations: Understanding Keyframes.
                                 </a>
                             </h4>
@@ -161,7 +161,7 @@
                         <li class="borderline-bottom py-1 mb-1">
                             <span class="fw-bold picotext">23rd June, 2019</span>
                             <h4 class="m-0 largetext fw-normal">
-                                <a href="" class="py-h mb-h d-blk co-richblack">
+                                <a href="article.html" class="py-h mb-h d-blk co-richblack">
                                     Choosing Design Tools.
                                 </a>
                             </h4>
@@ -176,7 +176,7 @@
                         <li class="borderline-bottom py-1 mb-1">
                             <span class="fw-bold picotext">14th May, 2019</span>
                             <h4 class="m-0 largetext fw-normal">
-                                <a href="" class="py-h mb-h d-blk co-richblack">
+                                <a href="article.html" class="py-h mb-h d-blk co-richblack">
                                     Semantic Markup and Why They are Necessary.
                                 </a>
                             </h4>
@@ -191,7 +191,7 @@
                         <li class="borderline-bottom py-1 mb-1">
                             <span class="fw-bold picotext">1st May, 2019</span>
                             <h4 class="m-0 largetext fw-normal">
-                                <a href="" class="py-h mb-h d-blk co-richblack">
+                                <a href="article.html" class="py-h mb-h d-blk co-richblack">
                                     Motivation for yet another day
                                 </a>
                             </h4>
@@ -242,7 +242,7 @@
                 </div>
             </div>
 
-            <div class="clearfix maxwidth-xs mx-auto">
+            <div class="clearfix maxwidth-tb wrapper mx-auto">
                 <div class="d-flx al-i-c j-c-c fw-w py-2">
                     <span class="writing-nav-icon p-h">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevrons-left">
