modified the article page

--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
                 </a>
                 <ul class="none d-flx al-i-c topmenu">
                     <li class="my-h">
-                        <a href="about.html" class="tx-c d-blk py-h co-richblack">
+                        <a href="about.html" class="tx-c d-blk py-h co-richblack is-active">
                             About
                         </a>
                     </li>
