--- a/article.html
+++ b/article.html
@@ -80,7 +80,7 @@
 
     <main>
         <section class="width-100-pc hide-flow-x writing-m-top">
-            <div class="clearfix maxwidth-sl mx-auto wrapper">
+            <div class="maxwidth-sl mx-auto wrapper">
                 <article>
                     <h2 class="m-0 largertext fw-normal">
                         <a href="article.html" class="py-h mb-h d-blk co-richblack">
@@ -110,6 +110,36 @@
                     <p>
                         Libero Ponti utilitate maiorum intellegitur sequatur praestabiliorem offendit Iam discordia ac dominos suscipere mandamus Consentinis horreat hostis salutandi esse! Temeritate Democriti suscipere reliquaque servire hoc Contra officii cives existimare inopem sollicitare omnem deserunt interesset individua dolor nescio pueriliter ipsarum odio Homero magnus, Contentus causam intellegaturque philosophari homini tollatur M'.que sicut confidet emolumento motum ferreum nemini excepturi. Reperire Praeterea arbitrantur concertationesque parta Graeci postulet errata neglegentur quaeri excepturi praeterita docti imperitorum penitus.
                     </p>
+                </article>
+
+                <article class="maxwidth-sl mx-auto wrapper clearfix mt-1">
+                    <div class="left-50">
+                        <a class="article-left-nav d-flx al-i-c">
+                            <span>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-left">
+                                    <line x1="19" y1="12" x2="5" y2="12"></line>
+                                    <polyline points="12 19 5 12 12 5"></polyline>
+                                </svg>
+                            </span>
+                            <p class="suffix is-wider">
+                                Choosing Design Tools.
+                            </p>
+                        </a>
+                    </div>
+                    <div class="right-50">
+                        <a class="tx-r article-right-nav d-flx j-c-fe al-i-c ">
+                            <p class="prefix mb-0 is-wider">
+                                CSS Animations: Understanding Keyframes.
+                            </p>
+                            <span >
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-right">
+                                    <line x1="5" y1="12" x2="19" y2="12"></line>
+                                    <polyline points="12 5 19 12 12 19"></polyline>
+                                </svg>
+                            </span>
+                        </a>
+
+                    </div>
                 </article>
             </div>
         </section>
