--- a/work.html
+++ b/work.html
@@ -62,7 +62,7 @@
                         </a>
                     </li>
                     <li class="my-h">
-                        <a href="work.html" class="tx-c d-blk py-h co-richblack">
+                        <a href="work.html" class="tx-c d-blk py-h co-richblack is-active">
                             Work
                         </a>
                     </li>
